make sure text is visible

--- a/css/style.css
+++ b/css/style.css
@@ -140,9 +140,14 @@ input {
 @media (max-width: 600px) {
 
     .main {
+        position: absolute;
         top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: rgba(235,233,229,0.4);
         transform: translateY(0);
-        margin-top: 30px;
+        padding-top: 30px;
     }
 
     .input, .input input {
